[tool.poetry]
name = "sneks"
version = "0.1.0"
description = "Launch a Dask cluster from a virtual environment"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
coiled = "^0.2.3"
cloudpickle = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.4.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
