[tool.poetry]
name = "sneks-sync"
version = "0.3.0"
description = "Launch a Dask cluster from a virtual environment"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sneks" }
]

[tool.poetry.dependencies]
python = "^3.8"
coiled = "^0.2.7"
cloudpickle = "^2.1.0"
tomli = "^2.0.1"
rich = "^12.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.4.0"
pytest = "^7.1.2"
pyright = "^1.1.251"
pytest-docker-compose = "^3.2.1"
aiodocker = "^0.21.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--docker-compose=sneks/tests/docker-compose.yml --docker-compose-remove-volumes"
