[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabe Joseph", email = "gjoseph92@gmail.com"},
]
dependencies = [
    "distributed==2022.11.1",
    "bokeh==3.0.2",
    "cloudpickle==2.2.0",
    "dask==2022.11.1",
    "msgpack==1.0.4",
    "numpy==1.23.4",
    "black==22.10.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.overrides]
mypy_extensions = "0.4.2"
