[tool.poetry]
name = "env-for-running-poetry"
version = "0.1.0"
description = ""
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = "2022.6.0"
distributed = "2022.6.0"
bokeh = "2.4.3"
cloudpickle = "2.1.0"
msgpack = "1.0.4"
numpy = "1.22.4"
black = "22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
