[tool.poetry]
name = "env-for-running-poetry"
version = "0.1.0"
description = ""
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
readme = "README.md"
packages = [{include = "env_for_running_poetry"}]

[tool.poetry.dependencies]
python = ">=3.9"
distributed = "2022.11.1"
bokeh = "3.0.2"
cloudpickle = "2.2.0"
dask = "2022.11.1"
msgpack = "1.0.4"
numpy = "1.23.4"
black = "22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
